--- a/src/style/Aboutpage.css
+++ b/src/style/Aboutpage.css
@@ -241,7 +241,7 @@ color: #97ABA6;
 
 .our-founders{
     width: 100%;
-    height: 700px;
+    height: fit-content;
     background-color: #97ABA6;
     display: flex;
     flex-direction: row;
@@ -639,5 +639,35 @@ color: #97ABA6;
         width: auto;
         height: 200px;
         padding: 1rem;
+    }
+}
+
+/* OUR FOUNDERS SECTI0N RESPONSIVE */
+
+@media (max-width: 1100px){
+    .heading-ourfounder{
+        font-size: 34PX;
+        line-height: 4.6rem;
+    }
+}
+
+@media (max-width: 1000px){
+    .heading-ourfounder{
+        font-size: 34PX;
+        line-height: 4.6rem;
+    }
+    .our-founders{
+        display: flex;
+        flex-direction: column;
+    }
+    .text-ourfounder {
+        width: auto;
+    }
+}
+
+@media (max-width: 1000px){
+    .abouttop-aboutpage {
+        font-size: 30px;
+        letter-spacing: 10px;
     }
 }
