--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -82,25 +82,7 @@
     height: 5px;
     background-color: #D77512;
 }
-.knowmoreabout{
-    margin: 0%;
-    width: 15%;
-    height: 5%;
-    border: none;
-    font-size: 15px;
-    font-weight: 700;
-    text-transform: uppercase;
-    background-color: #eaeaea;
-    color: #32564C;
-    box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3),
-                0px -5px 15px -5px rgba(255, 255, 255, 0.3);
-    border-radius: 0px;
-    transition: all 100s ease-in-out;
-}
-.knowmoreabout:hover{
-    box-shadow: inset 0px 5px 15px -5px rgba(0, 0, 0, 0.3),
-                inset 0px -5px 15px -5px rgba(255, 255, 255, 0.3);
-}
+
 .aboutcon{
     margin: 15px;
     margin-top: 30px;
@@ -109,7 +91,30 @@
     color: #eaeaea;
     text-transform: capitalize;
 }
-
+.knowmoreabout{
+    margin-top: 20px;
+    height: 2rem;
+    width: 10rem;
+    color: #fff;
+    text-decoration: none;
+    background-color: #32564C;
+    /* border-radius: 30px; */
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3),
+                0px -5px 15px -5px rgba(255, 255, 255, 0.1);
+    transition: all 0.3s;
+}
+.knowmoreabout:hover{
+    border-radius: 5px;
+    background-color: #D77512;
+    color: #32564C;
+    font-weight: 700;
+    box-shadow: inset 0px 5px 5px -5px rgba(0, 0, 0, 0.3),
+                inset 0px -5px 15px -5px rgba(255, 255, 255, 0.3);
+}
 .svg-aboutsection-topleftdiv{
     position: absolute;
     /* top: 100px; */
