--- a/src/style/landing.css
+++ b/src/style/landing.css
@@ -43,6 +43,7 @@ color: #32564C;
 .subheading-landing{
     font-family: SansSerif;
 font-style: normal;
+margin-left: 10px;
 font-weight: 100;
 font-size: 50px;
 text-transform: uppercase;
