--- a/src/style/ServicesPage.css
+++ b/src/style/ServicesPage.css
@@ -90,7 +90,7 @@
 
 .heading-leftsection-section2{
     font-size: 50px;
-    color: #D77512;
+    color: #32564C;
     padding-bottom: 1rem;
     border-bottom: 6px solid #D77512; 
 }
