--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -184,29 +184,78 @@
         display: none;
     } 
 
-    #about1{
-        width: 19rem;
-        height: 12rem;
-        margin-top: 60px;
-        margin-right: -20px;
+    .svg-aboutsection-topleftdiv{
+        display: none;
     }
-    #about2{
-        margin-top: 20px;
-        width: 12rem;
-        height: 19rem;
+
+    .heading-landing-about-head{
+        font-size: 54px;
+        line-height: 122px;
+        letter-spacing: 0.085em;
+        margin-bottom: 30px;
     }
-    #about3{
-        margin-top: -40px;
-        margin-right: -20px;
-        width: 12rem;
-        height: 19rem;
-        z-index: 10;
-    }
-    #about4{
-        margin-top: 20px;
-        width: 19rem;
-        height: 12rem;
-        z-index: 10;
+
+    .aboutleft img {
+        width: 7rem;
+        height: 7rem;
+        /* margin: 15px; */
+        margin-left: 30px;
+        /* margin-top: 30px; */
     }
 
 }
+
+@media(max-width: 1100px){
+    .aboutsection{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .heading-landing-about-head{
+        font-size: 44px;
+        line-height: 122px;
+        letter-spacing: 0.085em;
+        margin-bottom: 20px;
+    }
+
+    .aboutright, .aboutleft{
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .aboutright{
+        padding: 2rem;
+    }
+
+}   
+
+@media(max-width: 500px){
+    .heading-landing-about-head{
+        font-size: 34px;
+        line-height: 102px;
+        letter-spacing: 0.065em;
+        margin-bottom: 20px;
+    }
+
+    .aboutcon {
+        margin: 15px;
+        margin-top: 20px;
+        margin-bottom: 5%;
+        font-size: 30px;
+        color: #eaeaea;
+        text-transform: capitalize;
+    }
+
+    #about3{
+        margin-top: 18px;
+        margin-right: -20px;
+        width: 12rem;
+        height: 19rem;
+        z-index: 10;
+    }
+}
+
