responsive: landing-page

--- a/src/style/landing.css
+++ b/src/style/landing.css
@@ -135,6 +135,10 @@ transform: rotate(-90deg);
     overflow: hidden;
 }
 
+.infocon{
+    font-size: 20px;
+}
+
 /* scroll bar */
 
 body::-webkit-scrollbar-track
