--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -6,7 +6,7 @@
 .aboutleft{
     width: 50%;
     height: 100vh;
-    background-color: #32564C;
+    background-color: #2A615E;
     display: flex;
     z-index: -2;
     /* align-items: center; */
@@ -64,7 +64,7 @@
 .aboutright{
     width: 50%;
     height: 100vh;
-    background-color: #97ABA6;
+    background-color: #a1c7c5;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -79,7 +79,7 @@
         line-height: 142px;
         letter-spacing: 0.085em;
         margin-bottom: 50px;
-        color: rgb(50, 86, 76);
+        color: #2A615E;
 
     text-transform: uppercase;
     text-align: center;
@@ -97,7 +97,7 @@
     margin-top: 30px;
     margin-bottom: 5%;
     font-size: 40px;
-    color: #eaeaea;
+    color: #D77512;
     text-transform: capitalize;
 }
 .knowmoreabout{
@@ -106,7 +106,7 @@
     width: 10rem;
     color: #fff;
     text-decoration: none;
-    background-color: #32564C;
+    background-color: #2A615E;
     /* border-radius: 30px; */
     border: none;
     cursor: pointer;
@@ -119,7 +119,7 @@
 .knowmoreabout:hover{
     border-radius: 5px;
     background-color: #D77512;
-    color: #32564C;
+    color: #2A615E;
     font-weight: 700;
     box-shadow: inset 0px 5px 5px -5px rgba(0, 0, 0, 0.3),
                 inset 0px -5px 15px -5px rgba(255, 255, 255, 0.3);
