--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -95,7 +95,7 @@
     top: 0vh;
     width: 100%;
     height: 100vh;
-    background-color: #32564C;
+    background-color: #2A615E;
     z-index: 5;
     display: flex;
     flex-direction: column;
@@ -142,10 +142,10 @@ letter-spacing: 0.15em;
     color: transparent;
 }
 .leftele{
-    color: #D77512;
+    color: #e07810;
     transform: translateX(-5rem);
 }
 .rightele{
-    color: #97ABA6;
+    color: #A1C7C5;
     transform: translateX(5rem);
 }
