--- a/src/style/Aboutpage.css
+++ b/src/style/Aboutpage.css
@@ -20,7 +20,7 @@
     letter-spacing: 15px ;
     text-transform: uppercase;
     font-family: Big Shoulders Display;
-    /* background-color: #32564C; */
+    /* background-color: #2A615E; */
 }
 .abouttop-aboutpage h1{
     text-align: center;
@@ -43,7 +43,7 @@
 .aboutcompany-aboutpage{
     width: 100%;
     height: 350px;
-    background-color: #32564C;
+    background-color: #2A615E;
     display: flex;
     flex-direction: row;
 }
@@ -66,7 +66,7 @@ letter-spacing: 0.085em;
 display: flex;
     align-items: center;
     justify-content: center;
-color: #97ABA6;
+color: #A1C7C5;
 }
 
 .text-aboutourcompany{
@@ -99,7 +99,7 @@ color: #97ABA6;
 .ourdesigners{
     width: 100%;
     height: 850px;
-    background-color: #97ABA6;
+    background-color: #A1C7C5;
     display: flex;
     flex-direction: row;
 }
@@ -150,7 +150,7 @@ color: #97ABA6;
     letter-spacing: 0.085em;
     padding-top: 1rem;
     padding-bottom: 2rem;
-    color: #32564C;
+    color: #2A615E;
     border-bottom: 6px solid #D77512;
 }
 
@@ -172,7 +172,7 @@ color: #97ABA6;
     width: 100%;
     /* height: 900px; */
     height: fit-content;
-    background-color: #32564C;
+    background-color: #2A615E;
     display: flex;
     flex-direction: column;
 }
@@ -223,7 +223,7 @@ color: #97ABA6;
     /* padding-top: 1rem; */
     padding-bottom: 1.5rem;
     margin-bottom: 1rem;
-    color: #97ABA6;
+    color: #A1C7C5;
     border-bottom: 6px solid #D77512;
 }
 
@@ -242,7 +242,7 @@ color: #97ABA6;
 .our-founders{
     width: 100%;
     height: fit-content;
-    background-color: #97ABA6;
+    background-color: #A1C7C5;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -263,7 +263,7 @@ color: #97ABA6;
     letter-spacing: 0.18em;
     padding-top: 1rem;
     padding-bottom: 2rem;
-    color: #32564C;
+    color: #2A615E;
     border-bottom: 6px solid #D77512;
     text-align: center;
 }
@@ -281,7 +281,7 @@ color: #97ABA6;
     position: relative;
     width: 300px;
     height: 400px;
-    background: #32564C;
+    background: #2A615E;
     margin: 20px;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
