--- a/src/style/ServicesPage.css
+++ b/src/style/ServicesPage.css
@@ -45,7 +45,7 @@
 .section1-servicespage{
     width: 100%;
     height: 100vh;
-    background-color: #32564C;
+    background-color: #2A615E;
     display: flex;
     flex-direction: column;
 }
@@ -53,7 +53,7 @@
 .topsection-section1{
     width: 100%;
     height: 70vh;
-    background-color: #32564C;
+    background-color: #2A615E;
     display: flex;
     flex-direction: row;
 }
@@ -61,7 +61,7 @@
 .topsection-section2{
     width: 100%;
     height: 70vh;
-    background-color: #97ABA6;
+    background-color: #A1C7C5;
     display: flex;
     flex-direction: row;
 }
@@ -83,14 +83,14 @@
 
 .heading-leftsection-section1{
     font-size: 50px;
-    color: #97ABA6;
+    color: #A1C7C5;
     padding-bottom: 1rem;
     border-bottom: 6px solid #D77512;
 }
 
 .heading-leftsection-section2{
     font-size: 50px;
-    color: #32564C;
+    color: #2A615E;
     padding-bottom: 1rem;
     border-bottom: 6px solid #D77512; 
 }
@@ -118,7 +118,7 @@
 }
 
 .heading-textbox-rightsection-section2{
-    color: #32564C;
+    color: #2A615E;
 
     font-size: 45px;
 }
@@ -196,7 +196,7 @@
     .topsection-section1, .topsection-section2{
     width: 100%;
     height: 80vh;
-    /* background-color: #32564C; */
+    /* background-color: #2A615E; */
     display: flex;
     flex-direction: column;
     align-items: center;
