--- a/src/style/shoppage.css
+++ b/src/style/shoppage.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #32564C;
+    background-color: #2A615E;
 }
 .shoplandhead h1{
     text-transform: uppercase;
@@ -20,7 +20,7 @@
     border-bottom: 10px solid #D77512;
     border-radius: 5px;
     text-align: center;
-    color: #97ABA6;
+    color: #A1C7C5;
     font-family: Big Shoulders Display;
     letter-spacing: 20px;
 }
@@ -35,13 +35,13 @@
 .lightprods{
     height: 100%;
     width: 100%;
-    background-color: #97ABA6;
+    background-color: #A1C7C5;
 }
 .lightprods .shoplandhead, .furniture .shoplandhead{
-    background-color: #97ABA6;
+    background-color: #A1C7C5;
 }
 .lightprods .shoplandhead h1, .furniture .shoplandhead h1{
-    color: #32564C;
+    color: #2A615E;
 
 }
 .lightsec, .decorsec, .furnsec{
@@ -54,8 +54,8 @@
     padding-left: 120px;
 }
 .decorsec{
-    background-color: #32564C;
+    background-color: #2A615E;
 }
 .furnsec{
-    background-color: #97ABA6;
+    background-color: #A1C7C5;
 }
