--- a/src/style/landing.css
+++ b/src/style/landing.css
@@ -311,6 +311,7 @@ body::-webkit-scrollbar-thumb
 
     .infohead{
         margin-bottom: 0.5rem;
+        font-size: 25PX;
     }
 
     .infocon{
