--- a/src/style/shoppage.css
+++ b/src/style/shoppage.css
@@ -59,3 +59,65 @@
 .furnsec{
     background-color: #A1C7C5;
 }
+
+@media (max-width: 1250px){
+    .shoplandhead h1{
+    font-size: 7.5rem;
+    border-bottom: 10px solid #D77512;
+    border-radius: 5px;
+    text-align: center;
+    letter-spacing: 15px;
+    }
+
+    .lightsec, .decorsec, .furnsec{
+        padding-left: 0px;
+        justify-items: center;
+    }
+}
+
+@media (max-width: 1000px){
+    .shoplandhead h1{
+    font-size: 5.5rem;
+    border-bottom: 10px solid #D77512;
+    border-radius: 5px;
+    text-align: center;
+    letter-spacing: 12px;
+    }
+
+    .lightsec, .decorsec, .furnsec{
+        padding-left: 0px;
+        justify-items: center;
+    }
+}
+
+@media (max-width: 820px){
+    .shoplandhead h1{
+    font-size: 5.5rem;
+    border-bottom: 10px solid #D77512;
+    border-radius: 5px;
+    text-align: center;
+    letter-spacing: 12px;
+    }
+
+    .lightsec, .decorsec, .furnsec{
+        padding-left: 0px;
+        justify-items: center;
+        grid-template-columns: 1fr 1fr ;
+    }
+}
+
+@media (max-width: 590px){
+    .shoplandhead h1{
+    font-size: 3.5rem;
+    border-bottom: 10px solid #D77512;
+    border-radius: 5px;
+    text-align: center;
+    letter-spacing: 12px;
+    }
+
+    .lightsec, .decorsec, .furnsec{
+        padding-left: 0px;
+        justify-items: center;
+        grid-template-columns: 1fr;
+    }
+}
